--- a/views/home.hbs
+++ b/views/home.hbs
@@ -18,6 +18,17 @@
         </button>
      </form>
 
+    <form action="/Crypt" method="POST" enctype="multipart/form-data"> 
+        <button>
+            Encripta el documento
+        </button>
+     </form>
+
+         <form action="/Decrypt" method="POST" enctype="multipart/form-data"> 
+        <button>
+            Desencripta el Documento
+        </button>
+     </form>
     <br>
     {{>deployFiles}}
     <br>
