--- a/views/Register.hbs
+++ b/views/Register.hbs
@@ -78,8 +78,8 @@
   <body>
 
     <div class="bg-img">
-        <form action="ValidarUsuario" method="POST" class="container">
-            <h1>Inicia Sesión</h1>
+        <form action="RegistroUsuario" method="POST" class="container">
+            <h1>Registro de Usuario</h1>
 
             <label for="email"><b>Correo Electrónico</b></label>
             <input type="text" name="email" id="LogEmail" required placeholder="Ingrese su correo electrónico">
@@ -94,17 +94,7 @@
 
             <hr>
         </form>
-        <form action="RenderRegistro" method="POST">
-           <button class="button">¿No tienes Sesion? Crea una gratis aqui</button>
-        </form>
-
     </div>
-
-    <!-- Modal -->
-
-
-
-
   </div>
 </div>
     <!-- Optional JavaScript -->
